# OpenCircuit

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.github/workflows/: bluna-mentions.yml
desktop/: PPG_RAW_STATUS.md  analyze_0x47_bitwidth.py  analyze_ppg_13.py  analyze_state_byte.py  bp_calibration.py  bp_estimator.py  calibration_session.py  capture_app_session.py  capture_ppg.py  debug_ppg_mode10.py  decode_4d_4e.py  decode_bulk.py  decode_ppg.py  dump_tail.py  ecg_rpeaks.py  extract_last_night.py  identify_channels.py  livehr.py  phase_decode.py  poll_hr_spo2.py  ppg_feature_extractor.py  ppg_pipeline.py  ppg_watch.py  probe_mode_09_plus.py  probe_ppg_params.py  probe_ppg_raw.py  probe_third_service.py  ptt_calculator.py  pyproject.toml  session_analysis.py  spo2_calibrator.py  stream_ppg_13.py  sweep_opcodes.py
desktop/opencircuit/: auth.py  ble.py  cli.py  osa_4c.py  osa_metrics.py  osa_ppg.py  osa_spo2.py  osa_spo2_fd.py  session.py
desktop/openringconn/: __init__.py  ble.py  cli.py  framing.py  session.py
docs/: BACKGROUND_SYNC.md  BLE_INVESTIGATION_LOG.md  HANDOFF_MACOS_IOS.md  HEALTHKIT_MAPPING.md  LOG_REVIEW_CONTINUOUS_VITALS_HANDOFF_2026-06-25.md  PROTOCOL.md  REVERSE_ENGINEERING.md  ROADMAP.md  RUNBOOK_CAPTURE_SESSION.md  RUNBOOK_OSA_APNEA.md  RUNBOOK_OVERNIGHT_TEMP.md  RUNBOOK_SNOOP_SINGLE_SESSION.md  ppg-stage1-complete-handoff-2026-06-26.md
ios/: .gitignore  BP_MAC_IOS_FLOW.md  ExportOptionsAdHoc.plist  project.yml
ios/OpenCircuit/: App.swift  AppDelegate.swift  CalibrationSessionView.swift  CalibrationSupport.swift  ContentView.swift  (+22 more)
(+175 files in other folders)
