[project]
name = "openringconn"
version = "0.1.0"
description = "RingConn Gen 2 BLE reverse-engineering workbench"
requires-python = ">=3.10"
dependencies = ["bleak>=0.22"]

[project.scripts]
openringconn = "openringconn.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openringconn"]
